src/test/ui/elided-test.stderr
error[E0601]: `main` function not found in crate `elided_test`
  --> $DIR/elided-test.rs:5:1
   |
LL | #[test]
   | ^
   |
help: define a function named `main` at the crate root
   |
LL | fn main() {}
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
